# protocolx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: protocolx_release.yml
src/protocolx/: __init__.py  compose_protocol.py  composite_protocol.py
src/protocolx/definition/type/: protocol_sequence.py
src/protocolx/global_var/: protocol_cache.py
src/python/definition/: protocolx.py
src/python/definition/const/: protocol_meta.py
src/python/definition/enum/: check_status.py  protocol_meta_key.py
src/python/definition/namedtuple/: method_check_result.py
src/python/definition/p_model/: protocol_meta.py
src/python/protocolx/: implements.py  internal.py
test/protocolx/compose_protocol/: test_compose_protocol_basic.py  test_compose_protocol_cache_pickle.py  test_compose_protocol_inheritance.py  test_compose_protocol_runtime.py  test_compose_protocol_type_error.py
test/protocolx/definition/type/protocol_sequence/: test_core_function.py  test_edgecases.py  test_laziness.py  test_memoization.py
test/protocolx/global_var/protocol_cache/: test_clear_protocol_cache.py  test_get_anno_protocol_module.py  test_get_protocol_cache.py  test_get_set_del_protocol.py
test/protocolx/test_internal/: test_get_class_methods.py
test/python/protocolx/internal/: test_check_method_exists.py  test_get_class_methods.py  test_get_protocol_meta.py  test_get_protocol_methods.py  test_get_protocol_prefix.py  test_inject_default_if_available.py  test_report_check_result.py
