[project]
name = "protocolx"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "commitizen>=4.6.0",
    "hypothesis>=6.131.6",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
