[project]
name = "protocolx"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "commitizen>=4.6.0",
    "hypothesis>=6.131.6",
    "pytest>=8.3.5",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
add = false  # ✅ 禁用自动 git add .